syntax = "proto3";

package prediction;
option go_package = "github.com/justhumanz/service/prediction";

message Message{
    string State = 1;
    string Name = 2;
    int64 Limit = 3;
}
   
message MessageResponse{
    int32 Code =1;
    int64 Prediction =2;
    string Score =3;
    int64 NextMilestone =4;
}

service Prediction{
 rpc GetSubscriberPrediction(Message) returns (MessageResponse) {}
 rpc GetReverseSubscriberPrediction(Message) returns (MessageResponse) {} 
}